# flaskbb

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .dockerignore  .editorconfig  .gitignore  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.docker  NOTICE  README.md  babel.cfg  celery_worker.py  deleFor.py  docker-compose-dev.yml  docker-compose.yml  features.html  first_steps.html  flaskbb.cfg  index.html  manage.py  params.json  pyproject.toml  pyrightconfig.json  pytest.ini  remote_auth.py  requirements-cov.txt  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  (+8 more)
.github/workflows/: tests.yml
.scannerwork/: report-task.txt
.tx/: config
compose/dev/: Dockerfile  start
css/: bootstrap.min.css  main.css
docker/: docker-compose-dev.yml  docker-compose.yml
docker/dev/: Dockerfile  start
docs/: Makefile  accountmanagement.rst  api.rst  authentication.rst  cli.rst  conf.py  contents.rst.inc  deprecations.rst  events.rst  faq.rst  forummodels.rst  hooks.rst  index.rst  installation.rst  make.bat  models.rst  permissions.rst  plugin_development.rst  plugins.rst  releases.rst  settings.rst  theming.rst  usermodels.rst
docs/_static/: custom.css  main.css  main.js
docs/_templates/: layout.html  sidebarintro.html
docs/development/: localization.rst  settings.rst  theming.rst
docs/plugin_tutorial/: index.rst  structure.rst
docs/plugins/: index.rst
flaskbb/: __init__.py  _compat.py  app.py  cli.py  decorators.py  deprecation.py  email.py  exceptions.py  extensions.py  helpers.py  hooks.py  markup.py  static  template_filters.py  utils.py
flaskbb/admin/: forms.py  models.py  views.py
flaskbb/api/: __init__.py  forums.py  users.py
flaskbb/auth/: __init__.py  forms.py  plugins.py  views.py
flaskbb/cli/: __init__.py  commands.py  db.py  main.py  plugins.py  server.py  themes.py  translations.py  users.py  utils.py
flaskbb/configs/: base.py  config.cfg.template  default.py  development.py  development.py.example  example.py  production.py  production.py.example  testing.py
flaskbb/core/: changesets.py  exceptions.py  tokens.py
flaskbb/display/: navigation.py
flaskbb/fixtures/: groups.py  settings.py
flaskbb/forum/: forms.py  helpers.py  locals.py  models.py  utils.py  views.py
flaskbb/management/: __init__.py  forms.py  models.py  plugins.py  views.py
flaskbb/message/: forms.py  models.py  views.py
flaskbb/migrations/: 201501082314_8ad96e49dc6_init.py  201503222157_514ca0a3282c_private_messages.py  201504082225_127be3fb000_added_m2m_forumgroups_table.py  201606061345_221d918aa9f0_add_user_authentication_infos.py  201606210939_d9530a529b3f_add_timezone_awareness_for_datetime.py  201611190919_d87cea4e995d_remove_timezone_info_from_birthday_field.py  201705041144_933bd7d807c4_add_more_non_nullables.py  201706300917_881dd22cab94_add_date_modified_to_conversations.py  201709041519_d0ffadc3ea48_add_hidden_columns.py  201711180953_7c3fcf8a3335_add_plugin_tables.py  201802021027_af3f5579c84d_add_cascades.py  201802282131_232e68a03aa2_change_emoji_shortcodes_to_characters.py  201803012138_5945d8081a95_remove_conversations.py
flaskbb/oauth/: models.py  views.py
flaskbb/permissions/: locals.py  models.py  utils.py
flaskbb/plugins/: __init__.py  hooks.py  loader.py  manager.py  models.py  spec.py  utils.py
flaskbb/pms/: forms.py  models.py  views.py
flaskbb/static/: app.css  app.css.map  app.js  app.js.map  vendors.js  vendors.js.LICENSE.txt  vendors.js.map
flaskbb/templates/: confirm_dialog.html  editor_help.html  flashed_messages.html  layout.html  macros.html  markdown_help.html  navigation.html
flaskbb/tokens/: __init__.py  serializer.py  verifiers.py
flaskbb/translations/: messages.pot
flaskbb/user/: __init__.py  forms.py  models.py  plugins.py  repo.py  views.py
flaskbb/utils/: alembic.py  database.py  datastructures.py  decorators.py  deprecation.py  fields.py  forms.py  helpers.py  http.py  markup.py  pagination.py  permissions.py  populate.py  queries.py  query.py  recaptcha.py  requirements.py  search.py  settings.py  tokens.py  translations.py  types.py  views.py  widgets.py  wtforms.py
migrations/: 05da2ac3bd49_add_hidden_fields_and_permission.py  1214305c96eb_make_setting_value_types_enum.py  127be3fb000_added_m2m_forumgroups_table.py  201501082314_8ad96e49dc6_init.py  201503222157_514ca0a3282c_private_messages.py  201606061345_221d918aa9f0_add_user_authentication_infos.py  201705041144_933bd7d807c4_add_more_non_nullables.py  20171118_7c3fcf8a3335_add_plugin_tables.py  201802012053_ec39ababe957_add_ondelete_cascades.py  201802021027_af3f5579c84d_add_cascades.py  201802171925_5945d8081a95_remove_conversations.py  201802282131_232e68a03aa2_change_emoji_shortcodes_to_characters.py  221d918aa9f0_add_user_authentication_infos.py  331500ad355b_make_post_and_topic_hideable_models.py  63eabbb0e837_add_makehidden_permission.py  7c3fcf8a3335_add_plugin_tables.py  8777f0694678_test.py  881dd22cab94_add_date_modified_to_conversations.py  8ad96e49dc6_init.py  d0ffadc3ea48_add_hidden_columns.py  d87cea4e995d_remove_timezone_info_from_birthday_field.py  d9530a529b3f_add_timezone_awareness_for_datetime.py  fd6ed1fd7d1a_add_hidden_by_column.py
migrations/versions/: 0ece7c8bfb07_add_account_activation_timestamp.py  10879048c708_login_attempts.py  127be3fb000_added_m2m_forumgroups_table.py  15618287031a_oauth_provider.py  1862dd9f586c_init.py  221d918aa9f0_add_user_authentication_infos.py  2bafd4ae417a_init.py  514ca0a3282c_private_messages.py  537b84ff7327_roles.py  8ad96e49dc6_init.py  94b3d7958114_add_account_active_state.py  d9530a529b3f_add_timezone_awareness_for_datetime.py  ecc14a7aaa75_.py  ecc14a7aaa75_add_default_group.py
tests/: conftest.py
tests/cli/: test_plugins.py
tests/endtoend/: .test_auth_views.py.swp  test_auth_views.py  test_message_views.py
tests/fixtures/: app.py  auth.py  forum.py  helpers.py  message.py  plugin.py  settings_fixture.py  user.py
tests/unit/: test_email.py  (+6 more)
(+9716 files in other folders)
