[metadata]
name = FlaskBB
version = 2.0.2
url = https://flaskbb.org
project_urls =
    Documentation=https://flaskbb.readthedocs.io/en/latest/
    Code=https://github.com/flaskbb/flaskbb
    Issue Tracker=https://github.com/flaskbb/flaskbb
license = BSD
author = Peter Justin
author_email = peter.justin@outlook.com
description = A classic Forum Software in Python using Flask.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.5
install_requires =
    alembic>=1.4.2
    amqp>=2.6.0
    attrs>=19.3.0
    Babel>=2.8.0
    billiard>=3.6.3.0
    blinker>=1.4
    celery>=4.4.6
    certifi>=2020.6.20
    chardet>=3.0.4
    click>=7.1.2
    click-log>=0.3.2
    dnspython>=1.16.0
    email-validator>=1.1.1
    Flask>=1.1.2
    Flask-Alembic>=2.0.1
    flask-allows @ git+https://github.com/justanr/flask-allows.git@f/Cut-down-on-warnings#egg=flask-allows
    Flask-BabelPlus>=2.2.0
    Flask-Caching>=1.9.0
    Flask-DebugToolbar>=0.11.0
    flask-debugtoolbar-warnings>=0.1.0
    Flask-Limiter>=1.3.1
    Flask-Login>=0.5.0
    Flask-Mail>=0.9.1
    flask-redis>=0.4.0
    Flask-SQLAlchemy>=2.4.3
    Flask-Themes2>=0.1.5
    flask-whooshee>=0.7.0
    Flask-WTF>=0.14.3
    flaskbb-plugin-conversations>=1.0.7
    flaskbb-plugin-portal>=1.1.3
    future>=0.18.2
    idna>=2.10
    itsdangerous>=1.1.0
    Jinja2>=2.11.2
    kombu>=4.6.11
    limits>=1.5.1
    Mako>=1.1.3
    MarkupSafe>=1.1.1
    mistune>=0.8.4
    olefile>=0.46
    Pillow>=7.2.0
    pluggy>=0.13.1
    Pygments>=2.6.1
    python-dateutil>=2.8.1
    python-editor>=1.0.4
    pytz>=2020.1
    redis>=3.5.3
    requests>=2.24.0
    simplejson>=3.17.0
    six>=1.15.0
    speaklater>=1.3
    SQLAlchemy>=1.3.18
    SQLAlchemy-Utils>=0.36.8
    Unidecode>=1.1.1
    urllib3>=1.25.9
    vine>=1.3.0
    Werkzeug>=1.0.1
    Whoosh>=2.7.4
    WTForms>=2.3.1

[options.entry_points]
console_scripts =
    flaskbb=flaskbb.cli:flaskbb

[options.extras_require]
postgres = psycopg2-binary
test =
    py
    pytest
    pytest-cov
    cov-core
    coverage

[bdist_wheel]
universal = 1

[tool:pytest]
addopts =
    -vvl
    --strict
    --capture fd
    --tb short
    --pythonwarnings error::flaskbb.deprecation.FlaskBBDeprecation
    --cov flaskbb
    --cov-config setup.cfg
    --cov-append
norecursedirs = node_modules

[tool:isort]
lines_after_imports = 2
skip_glob = 20??????????_*_*.py, node_modules, .tox, docs, build, dist
not_skip = __init__.py
known_first_party = flaskbb
use_parentheses = true

[flake8]
ignore = E203, E712, E711, W503
select = C,E,F,W,B,B9
max-complexity = 10
max-line-length = 80
exclude =
    flaskbb/configs/default.py,
    flaskbb/_compat.py,
    migrations,
    node_modules,
    .git,
    .tox,
    *.pyc,
    __pycache__,
    instance,
    dist,
    build,
    docs

[coverage:run]
branch = true
source = flaskbb
omit =
    flaskbb/_compat.py
    flaskbb/configs/*
parallel = true

[coverage:paths]
source =
    flaskbb/
    .tox/*/lib/*/site-packages/flaskbb/

[coverage:report]
exclude_lines =
    pragma: no cover
   
    def __repr__
    if self\.debug
   
    raise AssertionError
    raise NotImplementedError
   
    if 0:
    if __name__ == .__main__.:
   
    @abstractmethod
ignore_errors = True
precision = 2
show_missing = true

[coverage:html]
directory = tests/htmlcov
